package service

import (
	"context"
	"time"

	"github.com/isectech/security-agent/config"
	"github.com/isectech/security-agent/usecase"
	"go.uber.org/zap"
)

// BaseService provides common functionality for all services
type BaseService struct {
	name      string
	config    *config.Config
	logger    *zap.Logger
	useCases  *usecase.UseCases
	isRunning bool
	startTime time.Time
}

// NewBaseService creates a new base service
func NewBaseService(name string, cfg *config.Config, logger *zap.Logger, useCases *usecase.UseCases) *BaseService {
	return &BaseService{
		name:     name,
		config:   cfg,
		logger:   logger,
		useCases: useCases,
	}
}

// Name returns the service name
func (s *BaseService) Name() string {
	return s.name
}

// IsRunning returns true if the service is running
func (s *BaseService) IsRunning() bool {
	return s.isRunning
}

// markStarted marks the service as started
func (s *BaseService) markStarted() {
	s.isRunning = true
	s.startTime = time.Now()
}

// markStopped marks the service as stopped
func (s *BaseService) markStopped() {
	s.isRunning = false
}

// HTTPService handles HTTP server functionality
type HTTPService struct {
	*BaseService
}

// NewHTTPService creates a new HTTP service
func NewHTTPService(cfg *config.Config, logger *zap.Logger, useCases *usecase.UseCases) *HTTPService {
	return &HTTPService{
		BaseService: NewBaseService("http-server", cfg, logger, useCases),
	}
}

// Start starts the HTTP service
func (s *HTTPService) Start(ctx context.Context) error {
	s.logger.Info("Starting HTTP service", zap.Int("port", s.config.Server.HTTPPort))

	// TODO: Implement HTTP server startup
	// This is a placeholder implementation

	s.markStarted()
	s.logger.Info("HTTP service started successfully")
	return nil
}

// Stop stops the HTTP service
func (s *HTTPService) Stop(ctx context.Context) error {
	s.logger.Info("Stopping HTTP service")

	// TODO: Implement HTTP server shutdown
	// This is a placeholder implementation

	s.markStopped()
	s.logger.Info("HTTP service stopped successfully")
	return nil
}

// Health returns the health status of the HTTP service
func (s *HTTPService) Health() HealthStatus {
	status := "healthy"
	message := "HTTP service is running normally"

	if !s.isRunning {
		status = "unhealthy"
		message = "HTTP service is not running"
	}

	return HealthStatus{
		Status:    status,
		Message:   message,
		Timestamp: time.Now(),
		Details: map[string]interface{}{
			"port":       s.config.Server.HTTPPort,
			"uptime":     time.Since(s.startTime).Seconds(),
			"is_running": s.isRunning,
		},
	}
}

// GRPCService handles gRPC server functionality
type GRPCService struct {
	*BaseService
}

// NewGRPCService creates a new gRPC service
func NewGRPCService(cfg *config.Config, logger *zap.Logger, useCases *usecase.UseCases) *GRPCService {
	return &GRPCService{
		BaseService: NewBaseService("grpc-server", cfg, logger, useCases),
	}
}

// Start starts the gRPC service
func (s *GRPCService) Start(ctx context.Context) error {
	s.logger.Info("Starting gRPC service", zap.Int("port", s.config.Server.GRPCPort))

	// TODO: Implement gRPC server startup
	// This is a placeholder implementation

	s.markStarted()
	s.logger.Info("gRPC service started successfully")
	return nil
}

// Stop stops the gRPC service
func (s *GRPCService) Stop(ctx context.Context) error {
	s.logger.Info("Stopping gRPC service")

	// TODO: Implement gRPC server shutdown
	// This is a placeholder implementation

	s.markStopped()
	s.logger.Info("gRPC service stopped successfully")
	return nil
}

// Health returns the health status of the gRPC service
func (s *GRPCService) Health() HealthStatus {
	status := "healthy"
	message := "gRPC service is running normally"

	if !s.isRunning {
		status = "unhealthy"
		message = "gRPC service is not running"
	}

	return HealthStatus{
		Status:    status,
		Message:   message,
		Timestamp: time.Now(),
		Details: map[string]interface{}{
			"port":       s.config.Server.GRPCPort,
			"uptime":     time.Since(s.startTime).Seconds(),
			"is_running": s.isRunning,
		},
	}
}

// DataCollectionService handles data collection functionality
type DataCollectionService struct {
	*BaseService
}

// NewDataCollectionService creates a new data collection service
func NewDataCollectionService(cfg *config.Config, logger *zap.Logger, useCases *usecase.UseCases) *DataCollectionService {
	return &DataCollectionService{
		BaseService: NewBaseService("data-collection", cfg, logger, useCases),
	}
}

// Start starts the data collection service
func (s *DataCollectionService) Start(ctx context.Context) error {
	s.logger.Info("Starting data collection service")

	// TODO: Implement data collection startup
	// This is a placeholder implementation

	s.markStarted()
	s.logger.Info("Data collection service started successfully")
	return nil
}

// Stop stops the data collection service
func (s *DataCollectionService) Stop(ctx context.Context) error {
	s.logger.Info("Stopping data collection service")

	// TODO: Implement data collection shutdown
	// This is a placeholder implementation

	s.markStopped()
	s.logger.Info("Data collection service stopped successfully")
	return nil
}

// Health returns the health status of the data collection service
func (s *DataCollectionService) Health() HealthStatus {
	status := "healthy"
	message := "Data collection service is running normally"

	if !s.isRunning {
		status = "unhealthy"
		message = "Data collection service is not running"
	}

	return HealthStatus{
		Status:    status,
		Message:   message,
		Timestamp: time.Now(),
		Details: map[string]interface{}{
			"collectors_enabled": []string{"process", "network", "file"},
			"uptime":             time.Since(s.startTime).Seconds(),
			"is_running":         s.isRunning,
		},
	}
}

// PolicyEnforcementService handles policy enforcement functionality
type PolicyEnforcementService struct {
	*BaseService
}

// NewPolicyEnforcementService creates a new policy enforcement service
func NewPolicyEnforcementService(cfg *config.Config, logger *zap.Logger, useCases *usecase.UseCases) *PolicyEnforcementService {
	return &PolicyEnforcementService{
		BaseService: NewBaseService("policy-enforcement", cfg, logger, useCases),
	}
}

// Start starts the policy enforcement service
func (s *PolicyEnforcementService) Start(ctx context.Context) error {
	s.logger.Info("Starting policy enforcement service")

	// TODO: Implement policy enforcement startup
	// This is a placeholder implementation

	s.markStarted()
	s.logger.Info("Policy enforcement service started successfully")
	return nil
}

// Stop stops the policy enforcement service
func (s *PolicyEnforcementService) Stop(ctx context.Context) error {
	s.logger.Info("Stopping policy enforcement service")

	// TODO: Implement policy enforcement shutdown
	// This is a placeholder implementation

	s.markStopped()
	s.logger.Info("Policy enforcement service stopped successfully")
	return nil
}

// Health returns the health status of the policy enforcement service
func (s *PolicyEnforcementService) Health() HealthStatus {
	status := "healthy"
	message := "Policy enforcement service is running normally"

	if !s.isRunning {
		status = "unhealthy"
		message = "Policy enforcement service is not running"
	}

	return HealthStatus{
		Status:    status,
		Message:   message,
		Timestamp: time.Now(),
		Details: map[string]interface{}{
			"enforcement_mode": s.config.Agent.PolicyEnforcement.EnforcementMode,
			"uptime":           time.Since(s.startTime).Seconds(),
			"is_running":       s.isRunning,
		},
	}
}

// CommunicationService handles backend communication functionality
type CommunicationService struct {
	*BaseService
}

// NewCommunicationService creates a new communication service
func NewCommunicationService(cfg *config.Config, logger *zap.Logger, useCases *usecase.UseCases) *CommunicationService {
	return &CommunicationService{
		BaseService: NewBaseService("communication", cfg, logger, useCases),
	}
}

// Start starts the communication service
func (s *CommunicationService) Start(ctx context.Context) error {
	s.logger.Info("Starting communication service", zap.String("backend_url", s.config.Communication.BackendURL))

	// TODO: Implement communication service startup
	// This is a placeholder implementation

	s.markStarted()
	s.logger.Info("Communication service started successfully")
	return nil
}

// Stop stops the communication service
func (s *CommunicationService) Stop(ctx context.Context) error {
	s.logger.Info("Stopping communication service")

	// TODO: Implement communication service shutdown
	// This is a placeholder implementation

	s.markStopped()
	s.logger.Info("Communication service stopped successfully")
	return nil
}

// Health returns the health status of the communication service
func (s *CommunicationService) Health() HealthStatus {
	status := "healthy"
	message := "Communication service is running normally"

	if !s.isRunning {
		status = "unhealthy"
		message = "Communication service is not running"
	}

	return HealthStatus{
		Status:    status,
		Message:   message,
		Timestamp: time.Now(),
		Details: map[string]interface{}{
			"backend_url":  s.config.Communication.BackendURL,
			"mtls_enabled": s.config.Communication.EnableMTLS,
			"uptime":       time.Since(s.startTime).Seconds(),
			"is_running":   s.isRunning,
		},
	}
}

// UpdateService handles agent update functionality
type UpdateService struct {
	*BaseService
}

// NewUpdateService creates a new update service
func NewUpdateService(cfg *config.Config, logger *zap.Logger, useCases *usecase.UseCases) *UpdateService {
	return &UpdateService{
		BaseService: NewBaseService("update", cfg, logger, useCases),
	}
}

// Start starts the update service
func (s *UpdateService) Start(ctx context.Context) error {
	s.logger.Info("Starting update service")

	// TODO: Implement update service startup
	// This is a placeholder implementation

	s.markStarted()
	s.logger.Info("Update service started successfully")
	return nil
}

// Stop stops the update service
func (s *UpdateService) Stop(ctx context.Context) error {
	s.logger.Info("Stopping update service")

	// TODO: Implement update service shutdown
	// This is a placeholder implementation

	s.markStopped()
	s.logger.Info("Update service stopped successfully")
	return nil
}

// Health returns the health status of the update service
func (s *UpdateService) Health() HealthStatus {
	status := "healthy"
	message := "Update service is running normally"

	if !s.isRunning {
		status = "unhealthy"
		message = "Update service is not running"
	}

	return HealthStatus{
		Status:    status,
		Message:   message,
		Timestamp: time.Now(),
		Details: map[string]interface{}{
			"update_channel": s.config.Agent.UpdateSettings.UpdateChannel,
			"check_interval": s.config.Agent.UpdateSettings.CheckInterval.String(),
			"uptime":         time.Since(s.startTime).Seconds(),
			"is_running":     s.isRunning,
		},
	}
}

// MonitoringService handles monitoring and metrics functionality
type MonitoringService struct {
	*BaseService
}

// NewMonitoringService creates a new monitoring service
func NewMonitoringService(cfg *config.Config, logger *zap.Logger, useCases *usecase.UseCases) *MonitoringService {
	return &MonitoringService{
		BaseService: NewBaseService("monitoring", cfg, logger, useCases),
	}
}

// Start starts the monitoring service
func (s *MonitoringService) Start(ctx context.Context) error {
	s.logger.Info("Starting monitoring service", zap.Int("metrics_port", s.config.Monitoring.MetricsPort))

	// TODO: Implement monitoring service startup
	// This is a placeholder implementation

	s.markStarted()
	s.logger.Info("Monitoring service started successfully")
	return nil
}

// Stop stops the monitoring service
func (s *MonitoringService) Stop(ctx context.Context) error {
	s.logger.Info("Stopping monitoring service")

	// TODO: Implement monitoring service shutdown
	// This is a placeholder implementation

	s.markStopped()
	s.logger.Info("Monitoring service stopped successfully")
	return nil
}

// Health returns the health status of the monitoring service
func (s *MonitoringService) Health() HealthStatus {
	status := "healthy"
	message := "Monitoring service is running normally"

	if !s.isRunning {
		status = "unhealthy"
		message = "Monitoring service is not running"
	}

	return HealthStatus{
		Status:    status,
		Message:   message,
		Timestamp: time.Now(),
		Details: map[string]interface{}{
			"metrics_port":    s.config.Monitoring.MetricsPort,
			"tracing_enabled": s.config.Monitoring.TracingEnabled,
			"uptime":          time.Since(s.startTime).Seconds(),
			"is_running":      s.isRunning,
		},
	}
}

// SecurityService handles security functionality
type SecurityService struct {
	*BaseService
}

// NewSecurityService creates a new security service
func NewSecurityService(cfg *config.Config, logger *zap.Logger, useCases *usecase.UseCases) *SecurityService {
	return &SecurityService{
		BaseService: NewBaseService("security", cfg, logger, useCases),
	}
}

// Start starts the security service
func (s *SecurityService) Start(ctx context.Context) error {
	s.logger.Info("Starting security service")

	// TODO: Implement security service startup
	// This includes tamper resistance, integrity checking, etc.
	// This is a placeholder implementation

	s.markStarted()
	s.logger.Info("Security service started successfully")
	return nil
}

// Stop stops the security service
func (s *SecurityService) Stop(ctx context.Context) error {
	s.logger.Info("Stopping security service")

	// TODO: Implement security service shutdown
	// This is a placeholder implementation

	s.markStopped()
	s.logger.Info("Security service stopped successfully")
	return nil
}

// Health returns the health status of the security service
func (s *SecurityService) Health() HealthStatus {
	status := "healthy"
	message := "Security service is running normally"

	if !s.isRunning {
		status = "unhealthy"
		message = "Security service is not running"
	}

	return HealthStatus{
		Status:    status,
		Message:   message,
		Timestamp: time.Now(),
		Details: map[string]interface{}{
			"tamper_resistance": s.config.Security.EnableTamperResistance,
			"code_signing":      s.config.Security.EnableCodeSigning,
			"anti_debugging":    s.config.Security.EnableAntiDebugging,
			"uptime":            time.Since(s.startTime).Seconds(),
			"is_running":        s.isRunning,
		},
	}
}
